<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/merchant_page_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:elevation="50dp"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:id="@+id/merchant_page_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/MerchantName"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_weight="0.2"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.052083332" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9557292" />

            <View
                android:id="@+id/new_merchant_page_style_viewColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="116dp"
                android:background="@color/LeadingColor"
                app:layout_constraintEnd_toStartOf="@+id/guideline2_page"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline_page"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/merchant_page_style_logo"
                android:layout_width="178dp"
                android:layout_height="179dp"
                android:background="@drawable/profile_bg"
                android:backgroundTint="@color/LeadingColor"
                app:layout_constraintBottom_toTopOf="@+id/new_merchant_page_style_viewColor"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2_page"
                app:layout_constraintStart_toStartOf="@+id/guideline_page"
                app:layout_constraintTop_toTopOf="@+id/new_merchant_page_style_viewColor" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/merchant_page_style_logoIMG"
                android:layout_width="178dp"
                android:layout_height="179dp"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toTopOf="@+id/new_merchant_page_style_viewColor"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2_page"
                app:layout_constraintStart_toStartOf="@+id/guideline_page"
                app:layout_constraintTop_toTopOf="@+id/new_merchant_page_style_viewColor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/merchant_page_phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/phoneNumber"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/merchant_page_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="20dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/merchant_page_BTN_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/LeadingColor"
                    android:text="@string/address"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/merchant_page_BTN_hours"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/LeadingColor"
                    android:text="@string/ActivityTime"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/merchant_page_BTN_services"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/LeadingColor"
                    android:text="@string/Services"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/merchant_page_BTN_calender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/LeadingColor"
                    android:text="@string/Journal"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/merchant_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <FrameLayout
            android:id="@+id/fragment_merchant_page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/merchant_page_owner_BTN_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/goodgrey"
                android:text="@string/cancel"
                android:layout_margin="10dp"
                android:layout_weight="1"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/merchant_page_owner_BTN_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/LeadingColor"
                android:text="@string/save"
                android:layout_margin="10dp"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>



</RelativeLayout>